--- a/Rapport/1Chapters/Implementation/ImplementationMAIN.tex
+++ b/Rapport/1Chapters/Implementation/ImplementationMAIN.tex
@@ -7,3 +7,5 @@
 \input{1Chapters/Implementation/Compressor.tex}
 
 \input{1Chapters/Implementation/communication.tex}
+
+\input{1Chapters/Implementation/finalProduct.tex}
