--- a/Rapport/2Appendix/AcceptRMS.tex
+++ b/Rapport/2Appendix/AcceptRMS.tex
@@ -1,4 +1,4 @@
-\chapter{Accepttest of RMS compressor}\label{app:journal_Frequency_Response}
+\chapter{Accepttest of RMS Limiter}\label{app:journal_Frequency_Response}
 The purpose of this test is verify requirement \textbf{XX} concerning RMS compressor.
 
 \section{Setup}
@@ -53,9 +53,9 @@ The procedure for this experiment is described as follows:
 \end{enumerate}
 
 \section{Data Extraction}
-The raw dat for the Bypass can be found at the CD \todo[inline]{CD}
-The raw dat for the Full system can be found at the CD \todo[inline]{CD}
-There are 30 bands from 20 Hz to 20 kHz, see \autoref{tb:freqBands}, where a magnitude is given in dB for each band. 10 different measurements have been taken for both bypass and the full system. The mean and standard deviation (std) have been found for each band as has been plotted. The two bands 25 Hz and 20000 Hz has been removed from the plots because of large deviation and therefore not deemed usefull.
+The raw data the system can be found at the CD, \\
+\path{CD://Maalinger/Maalinger210516 - Acceptance test for Limiter}\\
+There are 30 bands from 20 Hz to 20 kHz, see \autoref{tb:freqBands4}, where a magnitude is given in dB for each band. 10 different measurements have been taken for both bypass and the full system. The two bands 25 Hz and 20000 Hz has been removed from the plots because of large deviation and therefore not deemed usefull.
 
 \begin{table}[H]
 \centering
@@ -67,14 +67,26 @@ There are 30 bands from 20 Hz to 20 kHz, see \autoref{tb:freqBands}, where a mag
 2500 & 3150 & 4000 & 5000 & 6300 & 8000 & 10000 & 12500 & 16000 & 20000 \\ \hline
 \end{tabular}
 \caption{Frequency bands.}
-\label{tb:freqBands}
+\label{tb:freqBands4}
 \end{table}
 
 \section{Analysis}
 
+Plotting the RMS values of the different bands stated in \autoref{tb:freqBands4} yields the graphs in \autoref{fig:RMSlimiter}. It shows how attenuation of the lower frequencies is increased as the signal amplitude is increased.
+
+\begin{figure}[H]
+	\centering
+	\tikzsetnextfilename{AcceptRMS}
+	\input{figures/AcceptRMS.tex}
+	\caption{RMS limiter frequency response at different levels}
+	\label{fig:RMSlimiter}
+\end{figure}
+
 
 \section{Error sources}
 
+Due to large deviations in the 25 Hz and 20 kHz region, the measurements for these bands have been discarded. However since the IEC 581-6 demands only and effective frequency spectrum of 40 Hz to 16 kHz, the measurements are still deemed valid.
 
 \section{Conclusion}
-From the test of bypass and fulle system it can be concluded that 
+
+%From the test it can be concluded that the RMS limiter does not functions as expected. The gain values for the lowest frequencies are not correct since they are not attenuated equally. A not is created in the begin which can not be accounted for. There is however a slight attenuation of the lower frequencies present.  
