--- a/Rapport/1Chapters/1Preanalysis/Introduction.tex
+++ b/Rapport/1Chapters/1Preanalysis/Introduction.tex
@@ -1,13 +1,16 @@
 \chapter{Introduction}
-Loudspeakers today come in all sizes, types and shapes, has existed for over a century and is used by all, but it has yet to be perfected. In the 1980's an entirely new loudspeaker type, the active loudspeaker, began popping up and has gained popularity ever since. The rise of the active loudspeaker can probably be attributed to the rise of the digital signal processing which means that there are endlessly possibilities of processing a input signal like equalizing, compressing or synthesizing for example.
+Loudspeakers today come in all sizes, types and shapes, has existed for over a century and is owned by most people. In the 1980's the active loudspeaker, began popping up and has gained popularity ever since. The active loudspeaker and other multimedia have attributed to the a rapid development in signal processors as the demand of digital signal processing grew higher. With digital signal processing possibilities of processing signals such as equalization, compression and image processing were possible.
 
-These possibilities means the the potential of the active loudspeaker is far greater than the passive loudspeaker because the active loudspeaker has the amplifier   
+These possibilities signal processing means that the potential of the active loudspeaker is greater than the passive loudspeaker because the active loudspeaker has the amplifier which means it can supply peripheral electronics with power.
 
-Danger
 
-protection
+% Danger
+To compensate for the lack of bass the user may want to boost the bass in order to achieve a more rich sound. Because of the limited size, increasing the bass can potentially lead to sound distortions and cause the coil to hit the back plate of the driver if played too loud. The back plate hit will damage the loudspeaker and shorten the life time of the loudspeaker.
 
-Optimal sound 
+% Protection and optimal sound
+To avoid potential damage, a system must be designed to prevent the coil from hitting the back plate. A common solution is to hard clip the signal whenever it is beyond the capabilities of the loudspeaker, as this ensures that the signal level is kept in the rated region. This is however creates distortion which is undesirable. The aim of this project is therefore to develop a loudspeaker protective system, which can protect the loudspeaker against damage and still keep the amount distortion at a low level.
+
+
 
 % The market for Bluetooth loudspeakers has been growing considerably the last few years. According to \gls{CTA} the revenue of Bluetooth loudspeakers has been growing 69 \% between 2013 and 2014 \cite{sou:CTA}. The high growth is partly due to the increasing usage of smartphones and music streaming services, such as Spotify. As a result it is now more desirable for some users to wirelessly connect the smartphone to an audio system through for instance Bluetooth. By doing so, the user can use the smartphone to remote control his or her audio system. 
 
