--- a/Rapport/1Chapters/Implementation/Compressor.tex
+++ b/Rapport/1Chapters/Implementation/Compressor.tex
@@ -37,6 +37,15 @@ When the equation has calculated for 1024 values, these are stored in a array an
 The script for creating the values are located on a MATLAB script at: \\
 \path{CD://CD/Something Somethin}
 
+\begin{figure}[H]
+	\centering
+	\tikzsetnextfilename{LookUP}
+	\input{figures/LookUp.tex}
+	\caption{Caption }
+	\label{fig:Driver10Test}
+\end{figure}
+
+
 In the following listing \ref{listingCompressorMain} is a snippet of the entire RMS algorithm. Each line is commented for better overview.
 
 \begin{lstlisting}[language={[x86masm]Assembler}, caption = {Compressor Algorithm},label={listingCompressorMain}]
