--- a/Rapport/figures/Output3.tex
+++ b/Rapport/figures/Output3.tex
@@ -18,14 +18,14 @@ scale only axis,
 separate axis lines,
 %every outer x axis line/.append style={mycolor3},
 %every x tick label/.append style={font=\color{mycolor3}},
-xmin=9.46733577544888,
-xmax=9.47873739991108,
+xmin=9.65879166666667,
+xmax=9.67,
 xlabel={Time (secs)},
 xmajorgrids,
 %every outer y axis line/.append style={mycolor3},
 %every y tick label/.append style={font=\color{mycolor3}},
-ymin=-0.637952273887961,
-ymax=0.598574187192945,
+ymin=-1.2,
+ymax=1.2,
 ylabel={Amplitude},
 ymajorgrids,
 axis background/.style={fill=white}
@@ -600,7 +600,7 @@ table[row sep=crcr]{%
 9.6705625	-0.0414611130332669\\
 9.67058333333333	0.0437079231812153\\
 };
-\addplot [color=mycolor2,solid,forget plot]
+\addplot [color=black,solid,forget plot]
   table[row sep=crcr]{%
 9.65879166666667	0.819947271637319\\
 9.6588125	0.768423169556426\\
