--- a/Rapport/00setup/mybib.bib
+++ b/Rapport/00setup/mybib.bib
@@ -145,5 +145,13 @@
   year = {2016},
 }
 
+@MISC{sou:FIRpart4,
+  title = {FIR SYNTHESIS, FREQUENCY TRANSFORMATIONS AND FREQUENCY ANALYSIS.},
+  author = {Ove Andersen},
+  note = {Downloaded May 24, 2016},
+  howpublished = {\url{https://www.moodle.aau.dk/pluginfile.php/560358/mod_resource/content/1/Signal-Processing-part-4.pdf}},
+  year = {2016},
+}
+
 
 
