--- a/Rapport/1Chapters/Implementation/Compressor.tex
+++ b/Rapport/1Chapters/Implementation/Compressor.tex
@@ -30,7 +30,7 @@ The algorithm will therefore be using a lookup table to determined the correct g
 \end{equation}
 \begin{where}
 \va{$n$}{is the index number in the lookup table going from 0 to 1024}{.}
-\va{$Threshold$}{is 0.6 as calculated in \autoref{cha:CompressorDesign}{.}
+\va{$Threshold$}{is 0.6 as calculated in \autoref{cha:CompressorDesign}}{.}
 \end{where}
 
 \vspace{2mm}
